# backend

./: .env.dev  .gitignore  DjangoSetup.py  README.md  django_setup.sh  docker-compose.yml  requirement.txt  requirements.txt  setenv.py  setenv.sh
Assemble/: manage.py
Blog/: db.sqlite3  requirements.txt
Cookbook/: blog.json  db.sqlite3  tags.json
DjCelery/: main.py
DjangoMatplotlib/: manage.py
EveryAsync/: requirements.txt
Human/: requirements.txt
Paradox/: db.sqlite3
Polls/: requirements.txt
PollsAPI/: db.sqlite3
System/: db.sqlite3
assets/: requirements_django.txt  requirements_django_2.txt
backend/: Dockerfile_new  requirements.txt
backend-rs/: Cargo.toml
backend_dj/: Dockerfile  manage.py  requirements_django_2.txt
celery/: 103-creating-application-running-celery-worker.md  README.md
django/: setup.sh
educa/: README.md  requirements.txt
fastapi/: setup.sh
frontend/: angular.json  package.json
index-page/: vite.config.js  webpack.config.js
mpa/: index.html  package.json  tsconfig.json  vite.config.js  webpack.config.js
multi-page-application/: README.md  vite.config.js  webpack.config.js
myshop/: requirements.txt
mysite/django-polls/: README.rst  pyproject.toml  setup.cfg
mysite/django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mysite/django-polls/polls/: __init__.py  admin.py  models.py  some.py  tests.py  urls.py  views.py
mysite/django-polls/polls/migrations/: 0001_initial.py
mysite/django-polls/polls/static/polls/: style.css
mysite/django-polls/polls/templates/polls/: details.html
(+875 files in other folders)
